--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 # this is the development version of Yew
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 yew-router = { git = "https://github.com/yewstack/yew.git" }
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
+stylist = "0.13.0"
