Create simple DB and user structure

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix = "0.13.0"
-actix-files = "0.6.2"
-actix-web = "4.2.1"
-actix-web-actors = "4.1.0"
+validator = { version = "0.18.0", features = ["derive"] }
+# validator = "^0.15.2"
+actix-web = "4.9.0"
+faker_rand = "0.1.1"
 rand = "0.8.5"
-serde = "1.0.147"
-serde_json = "1.0.88"
+serde = { version = "1.0.209", features = ["derive"] }
+surrealdb = "2.0.4"
+thiserror = "2.0.3"
+tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.11.0", features = ["v4"] }
