Add create user, update user connect to db

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 validator = { version = "0.18.0", features = ["derive"] }
-# validator = "^0.15.2"
 actix-web = "4.9.0"
 faker_rand = "0.1.1"
 rand = "0.8.5"
@@ -14,3 +13,4 @@ surrealdb = "2.0.4"
 thiserror = "2.0.3"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.11.0", features = ["v4"] }
+derive_more = { version = "1.0.0", features = ["full"] }
