Make the trait for the database

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-validator = { version = "0.18.0", features = ["derive"] }
+validator = { version = "0.19.0", features = ["derive"] }
 actix-web = "4.9.0"
 faker_rand = "0.1.1"
 rand = "0.8.5"
 serde = { version = "1.0.209", features = ["derive"] }
-surrealdb = "2.0.4"
+surrealdb = "2.1.0"
 thiserror = "2.0.3"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.11.0", features = ["v4"] }
 derive_more = { version = "1.0.0", features = ["full"] }
+async-trait = "0.1.51"
