--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,6 @@ yew-router = { git = "https://github.com/yewstack/yew.git" }
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
 stylist = "0.13.0"
-serde = { version = "1.0.215", features = ["derive"] }
-reqwest = { version = "0.11", features = ["blocking"] }
-tokio = { version = "1.0", features = ["full"] }
+# serde = { version = "1.0.215", features = ["derive"] }
+# reqwest = { version = "0.11", features = ["blocking"] }
+# tokio = { version = "1.0", features = ["full"] }
