--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,8 @@ yew-router = { git = "https://github.com/yewstack/yew.git" }
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
 stylist = "0.13.0"
-# serde = { version = "1.0.215", features = ["derive"] }
-# reqwest = { version = "0.11", features = ["blocking"] }
-# tokio = { version = "1.0", features = ["full"] }
+reqwasm = "0.5.0"
+wasm-bindgen-futures = "0.4.29"
+gloo-console = "0.3.0"
+serde = { version = "1.0.209", features = ["derive"] }
+serde_json = { version = "1.0.133" }
