--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,3 +15,4 @@ wasm-bindgen-futures = "0.4.29"
 gloo-console = "0.3.0"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = { version = "1.0.133" }
+reqwest = { version = "0.12.9", features = ["json"] }
