--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # this is the development version of Yew
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 yew-router = { git = "https://github.com/yewstack/yew.git" }
+yew_styles = { version="0.11", features=["button", "text", "navbar"] }
 wasm-bindgen = "0.2.97"
 web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
 stylist = "0.13.0"
