--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,8 +11,8 @@ faker_rand = "0.1.1"
 rand = "0.8.5"
 serde = { version = "1.0.209" }
 surrealdb = "2.1.2"
-thiserror = "2.0.3"
-tokio = { version = "1", features = ["full"] }
+thiserror = "2.0.4"
+tokio = { version = "1.42.0", features = ["full"] }
 uuid = { version = "1.11.0", features = ["v4"] }
 derive_more = { version = "1.0.0", features = ["full"] }
 async-trait = "0.1.51"
@@ -20,3 +20,4 @@ serde_json = { version = "1.0.133" }
 chrono = "0.4.38"
 jsonwebtoken = "9.3.0"
 argon2 = "0.5.3"
+lazy_static = "1.4.0"
