--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,7 +11,7 @@ faker_rand = "0.1.1"
 rand = "0.8.5"
 serde = { version = "1.0.209" }
 surrealdb = "2.1.2"
-thiserror = "2.0.4"
+thiserror = "2.0.6"
 tokio = { version = "1.42.0", features = ["full"] }
 uuid = { version = "1.11.0", features = ["v4"] }
 derive_more = { version = "1.0.0", features = ["full"] }
@@ -21,3 +21,9 @@ chrono = "0.4.38"
 jsonwebtoken = "9.3.0"
 argon2 = "0.5.3"
 lazy_static = "1.4.0"
+actix = "0.13"
+actix-web-actors = "4"
+env_logger = "0.11.5"
+log = "0.4"
+futures-util = "0.3"
+tokio-tungstenite = "0.24.0"
