--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,10 +15,11 @@ reqwasm = "0.5.0"
 wasm-bindgen-futures = "0.4.49"
 gloo-console = "0.3.0"
 gloo = "0.11.0"
-serde = { version = "1.0.209", features = ["derive"] }
+serde = { version = "1.0.216", features = ["derive"] }
 serde_json = { version = "1.0.133" }
 reqwest = { version = "0.12.9", features = ["json"] }
 validator = { version = "0.19.0", features = ["derive"] }
 gloo-net = "0.6.0"
 futures-util = "0.3"
 yew-hooks = "0.3.0"
+chrono = "0.4.32"
